--- a/log-api/src/main/resources/messages.properties
+++ b/log-api/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
-NotBlank = √â obrigat√≥rio
-Size = Deve ter no m√≠nimo {2} e no m√°ximo {1} caracteres
-Email=Deve ser um e-mail v√°lido
+NotBlank = … obrigatÛrio
+NotNull = … obrigatÛrio
+Size = Deve ter no mÌnimo {2} e no m·ximo {1} caracteres
+Email=Deve ser um e-mail v·lido
+
+
